--- a/Namaste chef/about.html
+++ b/Namaste chef/about.html
@@ -47,7 +47,7 @@
         <h4>-And this is us below....</h4>
 
         <div class="card" style="width: 18rem;">
-            <img src="./images /our image and logo/athu.jpg" class="imag" alt="..." width="280rem" >
+            <img src="images/our_image_and_logo/athu.jpg" class="imag" alt="..." width="280rem" >
             <div class="card-body">
               <p class="card-text">
                 <h2>-Atharva M Patil</h2>
@@ -56,7 +56,7 @@
           </div>
 
           <div class="card" style="width: 18rem;">
-            <img src="./images /our image and logo/anuja.jpg" class="imag" alt="..." width="280rem" >
+            <img src="images/our_image_and_logo/anuja.jpg" class="imag" alt="..." width="280rem" >
             <div class="card-body">
               <p class="card-text">
                 <h2>-Anuja A Patil</h2>
@@ -65,7 +65,7 @@
           </div>
 
           <div class="card" style="width: 18rem;">
-            <img src="./images /our image and logo/aditi.jpg" class="imag" alt="..." width="280rem" >
+            <img src="images/our_image_and_logo/aditi.jpg" class="imag" alt="..." width="280rem" >
 
             <div class="card-body">
               <p class="card-text">
@@ -78,7 +78,7 @@
 
          
           <div class="card" style="width: 18rem;">
-            <img src="./images /our image and logo/amey.jpg" class="imag" alt="..." width="280rem" >
+            <img src="images/our_image_and_logo/amey.jpg" class="imag" alt="..." width="280rem" >
             <div class="card-body">
               <p class="card-text">
                 <h2>-Amey Kulkarni</h2>
