--- a/Namaste chef/goa.html
+++ b/Namaste chef/goa.html
@@ -53,10 +53,10 @@
 <body>
 <div class="container">
     <h1>Goa - where the sea meets the sky🌤️</h1>
-    <img src="./images /goa images/goap.jpg" alt="" width="100%" >
+    <img src="images/goa_images//goap.jpg" alt="" width="100%" >
 
     <div class="card" style="width: 18rem;">
-        <img src="./images /goa images/prawns.jpg" class="card-img-top" alt="..." width="280rem" >
+        <img src="images/goa_images//prawns.jpg" class="card-img-top" alt="..." width="280rem" >
         <div class="card-body">
           <h2 class="card-title">Tandoori Prawns</h2>
           <p class="card-text">
@@ -109,7 +109,7 @@ Once done, sprinkle some chaat masala and serve them with sauce/chutney of your 
 
 
       <div class="card" style="width: 18rem;">
-        <img src="./images /goa images/fishcurry.jpg" class="card-img-top" alt="..." width="280rem" >
+        <img src="images/goa_images//fishcurry.jpg" class="card-img-top" alt="..." width="280rem" >
         <div class="card-body">
           <h2 class="card-title">Goan Fish Curry</h2>
           <p class="card-text">
@@ -170,7 +170,7 @@ Add the marinated fish to the pan and let the fish soak in all the masala. Let i
 
 
       <div class="card" style="width: 18rem;">
-        <img src="./images /goa images/bangda.jpg" class="card-img-top" alt="..." width="280rem" >
+        <img src="images/goa_images//bangda.jpg" class="card-img-top" alt="..." width="280rem" >
         <div class="card-body">
           <h2 class="card-title">Stuffed Bangda(Mackeral)</h2>
           <p class="card-text">
@@ -222,7 +222,7 @@ Add the marinated fish to the pan and let the fish soak in all the masala. Let i
 
 
       <div class="card" style="width: 18rem;">
-        <img src="./images /goa images/mush.jpg" class="card-img-top" alt="..." width="280rem" >
+        <img src="images/goa_images//mush.jpg" class="card-img-top" alt="..." width="280rem" >
         <div class="card-body">
           <h2 class="card-title">Mushroom Fry goan style </h2>
           <p class="card-text">
@@ -278,7 +278,7 @@ Switch off the heat and serve Mushroom Fry hot or warm with roti, bread or dinne
 
 
       <div class="card" style="width: 18rem;">
-        <img src="./images /goa images/tambdi.jpg" class="card-img-top" alt="..." width="280rem" >
+        <img src="images/goa_images//tambdi.jpg" class="card-img-top" alt="..." width="280rem" >
         <div class="card-body">
           <h2 class="card-title">Tambdi Bhaji</h2>
           <p class="card-text">
@@ -331,7 +331,7 @@ Switch off the heat and serve Mushroom Fry hot or warm with roti, bread or dinne
 
 
       <div class="card" style="width: 18rem;">
-        <img src="./images /goa images/ros.jpg" class="card-img-top" alt="..." width="280rem" >
+        <img src="images/goa_images//ros.jpg" class="card-img-top" alt="..." width="280rem" >
         <div class="card-body">
           <h2 class="card-title">Ros-omlette</h2>
           <p class="card-text">
@@ -381,7 +381,7 @@ Switch off the heat and serve Mushroom Fry hot or warm with roti, bread or dinne
 
 
       <div class="card" style="width: 18rem;">
-        <img src="./images /goa images/crab.jpg" class="card-img-top" alt="..." width="280rem" >
+        <img src="images/goa_images//crab.jpg" class="card-img-top" alt="..." width="280rem" >
         <div class="card-body">
           <h2 class="card-title">Crab Xec Xec</h2>
           <p class="card-text">
@@ -436,7 +436,7 @@ Switch off the heat and serve Mushroom Fry hot or warm with roti, bread or dinne
 
 
       <div class="card" style="width: 18rem;">
-        <img src="./images /goa images/chonank.jpg" class="card-img-top" alt="..." width="280rem" >
+        <img src="images/goa_images//chonank.jpg" class="card-img-top" alt="..." width="280rem" >
         <div class="card-body">
           <h2 class="card-title">Chonak Fish Curry</h2>
           <p class="card-text">
@@ -502,7 +502,7 @@ Switch off the heat and serve Mushroom Fry hot or warm with roti, bread or dinne
 
 
       <div class="card" style="width: 18rem;">
-        <img src="./images /goa images/pomfret.jpg" class="card-img-top" alt="..." width="280rem" >
+        <img src="images/goa_images//pomfret.jpg" class="card-img-top" alt="..." width="280rem" >
         <div class="card-body">
           <h2 class="card-title">Pomfret Fry</h2>
           <p class="card-text">
