--- a/Namaste chef/gujrat.html
+++ b/Namaste chef/gujrat.html
@@ -53,12 +53,12 @@
 <body>
    <div class="data">
     <h1>Kem cho loko !!</h1>
-    <img src="./images /gujrat images/guj.jpg" alt="" width="100%">
+    <img src="images/gujrat_images/guj.jpg" alt="" width="100%">
    </div>
 
    
     <div class="card" style="width: 18rem;">
-        <img src="./images /gujrat images/dhokla.jpg" class="card-img-top" alt="..." width="280rem" >
+        <img src="images/gujrat_images/dhokla.jpg" class="card-img-top" alt="..." width="280rem" >
         <div class="card-body">
           <h2 class="card-title">Khaman Dhokla Recipe</h2>
           <p class="card-text">  INGREDIENTS
@@ -129,7 +129,7 @@
       
       
       <div class="card" style="width: 18rem;">
-        <img src="./images /gujrat images/thepla.jpg" class="card-img-top" alt="..." width="280rem" >
+        <img src="images/gujrat_images/thepla.jpg" class="card-img-top" alt="..." width="280rem" >
         <div class="card-body">
           <h2 class="card-title">Thepla</h2>
           <p class="card-text">  INGREDIENTS
@@ -188,7 +188,7 @@
 
 
       <div class="card" style="width: 18rem;">
-        <img src="./images /gujrat images/kandvi.jpg" class="card-img-top" alt="..." width="280rem" >
+        <img src="images/gujrat_images/kandvi.jpg" class="card-img-top" alt="..." width="280rem" >
         <div class="card-body">
           <h2 class="card-title">Kandvi</h2>
           <p class="card-text">  INGREDIENTS
@@ -253,7 +253,7 @@
 
 
       <div class="card" style="width: 18rem;">
-        <img src="./images /gujrat images/muthiya.jpg" class="card-img-top" alt="..." width="280rem" >
+        <img src="images/gujrat_images/muthiya.jpg" class="card-img-top" alt="..." width="280rem" >
         <div class="card-body">
           <h2 class="card-title">Muthiya</h2>
           <p class="card-text">  INGREDIENTS
@@ -313,7 +313,7 @@
 
 
       <div class="card" style="width: 18rem;">
-        <img src="./images /gujrat images/methi.jpg" class="card-img-top" alt="..." width="280rem" >
+        <img src="images/gujrat_images/methi.jpg" class="card-img-top" alt="..." width="280rem" >
         <div class="card-body">
           <h2 class="card-title">Methi na gota
           </h2>
@@ -372,7 +372,7 @@
 
 
       <div class="card" style="width: 18rem;">
-        <img src="./images /gujrat images/patra.jpg" class="card-img-top" alt="..." width="280rem" >
+        <img src="images/gujrat_images/patra.jpg" class="card-img-top" alt="..." width="280rem" >
         <div class="card-body">
           <h2 class="card-title">Patra 
           </h2>
@@ -447,7 +447,7 @@
 
 
       <div class="card" style="width: 18rem;">
-        <img src="./images /gujrat images/fafda.jpg" class="card-img-top" alt="..." width="280rem" >
+        <img src="images/gujrat_images/fafda.jpg" class="card-img-top" alt="..." width="280rem" >
         <div class="card-body">
           <h2 class="card-title">Fafda Recipe</h2>
           <p class="card-text">  INGREDIENTS
