--- a/Namaste chef/karnataka.html
+++ b/Namaste chef/karnataka.html
@@ -57,10 +57,10 @@
     <div class="data">
         <h1>ಕರ್ನಾಟಕಕ್ಕೆ ಸ್ವಾಗತ (welcome to karnataka
             )</h1>
-        <img src="./images /karnataka images/kanna.jpg" alt="" width="100%" >
+        <img src="images/karnataka_images/kanna.jpg" alt="" width="100%" >
     </div>
     <div class="card" style="width: 18rem;">
-        <img src="./images /karnataka images/korri.jpg" class="card-img-top" alt="..." width="280rem" >
+        <img src="images/karnataka_images/korri.jpg" class="card-img-top" alt="..." width="280rem" >
         <div class="card-body">
           <h2 class="card-title">
             KORRI GASSI(chicken dish) </h2>
@@ -109,7 +109,7 @@ For the main preparation: <hr>
 
 
       <div class="card" style="width: 18rem;">
-        <img src="./images /karnataka images/neer.jpg" class="card-img-top" alt="..." width="280rem" >
+        <img src="images/karnataka_images/neer.jpg" class="card-img-top" alt="..." width="280rem" >
         <div class="card-body">
           <h2 class="card-title">NEER DOSA
           </h2>
@@ -146,7 +146,7 @@ For the main preparation: <hr>
       </div>
 
       <div class="card" style="width: 18rem;">
-        <img src="./images /karnataka images/kundapur.jpg" class="card-img-top" alt="..." width="280rem" >
+        <img src="images/karnataka_images/kundapur.jpg" class="card-img-top" alt="..." width="280rem" >
         <div class="card-body">
           <h2 class="card-title">KUNDAPURA KOLI SAARU(CHICKEN DISH)
 
@@ -195,7 +195,7 @@ Prepare the main dish: <hr>
       </div>
 
       <div class="card" style="width: 18rem;">
-        <img src="./images /karnataka images/allugeda.jpg" class="card-img-top" alt="..." width="280rem" >
+        <img src="images/karnataka_images/allugeda.jpg" class="card-img-top" alt="..." width="280rem" >
         <div class="card-body">
           <h2 class="card-title">Allugedda (Mashed Masala Potatoes) 
           </h2>
@@ -245,7 +245,7 @@ Prepare the main dish: <hr>
       </div>
 
       <div class="card" style="width: 18rem;">
-        <img src="./images /karnataka images/sagu.jpg" class="card-img-top" alt="..." width="280rem" >
+        <img src="images/karnataka_images/sagu.jpg" class="card-img-top" alt="..." width="280rem" >
         <div class="card-body">
           <h2 class="card-title">Sagu 
           </h2>
@@ -293,7 +293,7 @@ Prepare the main dish: <hr>
       </div>
 
       <div class="card" style="width: 18rem;">
-        <img src="./images /karnataka images/udipi.jpg" class="card-img-top" alt="..." width="280rem" >
+        <img src="images/karnataka_images/udipi.jpg" class="card-img-top" alt="..." width="280rem" >
         <div class="card-body">
           <h2 class="card-title">UDUPI SAMBAR
           </h2>
@@ -335,7 +335,7 @@ Prepare the main dish: <hr>
       </div>
 
       <div class="card" style="width: 18rem;">
-        <img src="./images /karnataka images/bisi-bele-bath.jpg" class="card-img-top" alt="..." width="280rem" >
+        <img src="images/karnataka_images/bisi-bele-bath.jpg" class="card-img-top" alt="..." width="280rem" >
         <div class="card-body">
           <h2 class="card-title">Bissi Bele Bhath
           </h2>
@@ -378,7 +378,7 @@ Prepare the main dish: <hr>
       </div>
 
       <div class="card" style="width: 18rem;">
-        <img src="./images /karnataka images/kane.jpg" class="card-img-top" alt="..." width="280rem" >
+        <img src="images/karnataka_images/kane.jpg" class="card-img-top" alt="..." width="280rem" >
         <div class="card-body">
           <h2 class="card-title">Kane Rava Fry(fish dish)
           </h2>
