--- a/Namaste chef/maha.html
+++ b/Namaste chef/maha.html
@@ -56,9 +56,9 @@
 
     <div class="container">
         <h1>नमस्कार मंडळी, कसे आहात?🙏🏻</h1>
-        <img src="./images /maharashtra/mhd.jpg" alt="" width="100%" >
+        <img src="images/maharashtra/mhd.jpg" alt="" width="100%" >
         <div class="card" style="width: 18rem;">
-            <img src="./images /maharashtra/puran.jpg" class="card-img-top" alt="..." width="280rem" >
+            <img src="images/maharashtra/puran.jpg" class="card-img-top" alt="..." width="280rem" >
             <div class="card-body">
               <h2 class="card-title"> Puran-Poli </h2>
               <p class="card-text">
@@ -112,7 +112,7 @@ Prepare Puran Poli:
     
 
      <div class="card" style="width: 18rem;">
-        <img src="./images /maharashtra/modak.jpg " class="card-img-top" alt="..." width="280rem" >
+        <img src="images/maharashtra/modak.jpg " class="card-img-top" alt="..." width="280rem" >
         <div class="card-body">
           <h2 class="card-title"> Ukadiche Modak</h2>
           <p class="card-text">
@@ -169,7 +169,7 @@ finally, offer ukadiche modak to lord ganesha and celebrate ganesh chathurthi
  </div>
 
  <div class="card" style="width: 18rem;">
-    <img src="./images /maharashtra/kothimbir.jpg" class="card-img-top" alt="..." width="280rem" >
+    <img src="images/maharashtra/kothimbir.jpg" class="card-img-top" alt="..." width="280rem" >
     <div class="card-body">
       <h2 class="card-title"> Kothimbir Vadi </h2>
       <p class="card-text">
@@ -222,7 +222,7 @@ RECIPE:
 
 </div>
 <div class="card" style="width: 18rem;">
-    <img src="./images /maharashtra/pandhra.jpg" class="card-img-top" alt="..." width="280rem" >
+    <img src="images/maharashtra/pandhra.jpg" class="card-img-top" alt="..." width="280rem" >
     <div class="card-body">
       <h2 class="card-title"> Pandhra Rassa</h2>
       <p class="card-text">
@@ -280,7 +280,7 @@ RECIPE:
 
 
 <div class="card" style="width: 18rem;">
-    <img src="./images /maharashtra/kheer.jpg " class="card-img-top" alt="..." width="280rem" >
+    <img src="images/maharashtra/kheer.jpg " class="card-img-top" alt="..." width="280rem" >
     <div class="card-body">
       <h2 class="card-title">Ghavachi-kheer</h2>
       <p class="card-text">
@@ -329,7 +329,7 @@ RECIPE:
 
 
 <div class="card" style="width: 18rem;">
-    <img src="./images /maharashtra/mutton rassa.jpg" class="card-img-top" alt="..." width="280rem" >
+    <img src="images/maharashtra/mutton rassa.jpg" class="card-img-top" alt="..." width="280rem" >
     <div class="card-body">
       <h2 class="card-title"> Mutton Rassa </h2>
       <p class="card-text">
@@ -378,7 +378,7 @@ RECIPE:
 </div>
 
 <div class="card" style="width: 18rem;">
-    <img src="./images /maharashtra/misal.jpg" class="card-img-top" alt="..." width="280rem" >
+    <img src="images/maharashtra/misal.jpg" class="card-img-top" alt="..." width="280rem" >
     <div class="card-body">
       <h2 class="card-title">Misal pav</h2>
       <p class="card-text">
@@ -440,7 +440,7 @@ RECIPE:
 </div>
 
 <div class="card" style="width: 18rem;">
-    <img src="./images /maharashtra/karela.jpg" class="card-img-top" alt="..." width="280rem" >
+    <img src="images/maharashtra/karela.jpg" class="card-img-top" alt="..." width="280rem" >
     <div class="card-body">
       <h2 class="card-title">Stuffed Karela</h2>
       <p class="card-text">
@@ -507,7 +507,7 @@ Cut it open and remove the seeds. <br>
 
 
 <div class="card" style="width: 18rem;">
-    <img src="./images /maharashtra/sukka.jpg" class="card-img-top" alt="..." width="280rem" >
+    <img src="images/maharashtra/sukka.jpg" class="card-img-top" alt="..." width="280rem" >
     <div class="card-body">
       <h2 class="card-title">Mutton Sukka</h2>
       <p class="card-text">
