--- a/Namaste chef/punjab.html
+++ b/Namaste chef/punjab.html
@@ -53,9 +53,9 @@
 <body>
     <div class="container">
         <h1>Chakk de Phatte...Welcome to Punjab !!</h1>
-        <img src="./images /punjab images/pun.jpg" alt="" width="100%" >
+        <img src="images/punjab_images/pun.jpg" alt="" width="100%" >
     <div class="card" style="width: 18rem;">
-        <img src="./images /punjab images/paneer.jpg" class="card-img-top" alt="..." width="280rem" >
+        <img src="images/punjab_images/paneer.jpg" class="card-img-top" alt="..." width="280rem" >
         <div class="card-body">
           <h2 class="card-title">Paneer Butter Masala</h2>
           <p class="card-text">
@@ -109,7 +109,7 @@
       </div>
 
       <div class="card" style="width: 18rem;">
-        <img src="./images /punjab images/dal tadka.jpg" class="card-img-top" alt="..." width="280rem" >
+        <img src="images/punjab_images/dal tadka.jpg" class="card-img-top" alt="..." width="280rem" >
         <div class="card-body">
           <h2 class="card-title">Punjabi Dal Tadka</h2>
           <p class="card-text">
@@ -180,7 +180,7 @@
 
 
       <div class="card" style="width: 18rem;">
-        <img src="./images /punjab images/cholemasala.jpg" class="card-img-top" alt="..." width="290rem" >
+        <img src="images/punjab_images/cholemasala.jpg" class="card-img-top" alt="..." width="290rem" >
         <div class="card-body">
           <h2 class="card-title">Punjabi Chole Masala</h2>
           <p class="card-text">
@@ -250,7 +250,7 @@ Check for salt and add more if needed.
 
 
       <div class="card" style="width: 18rem;">
-        <img src="./images /punjab images/missi.jpg" class="card-img-top" alt="..." width="280rem" >
+        <img src="images/punjab_images/missi.jpg" class="card-img-top" alt="..." width="280rem" >
         <div class="card-body">
           <h5 class="card-title">Punjabi Missi Roti</h5>
           <p class="card-text">
@@ -306,7 +306,7 @@ Check for salt and add more if needed.
 
 
       <div class="card" style="width: 18rem;">
-        <img src="./images /punjab images/rajma.jpg" class="card-img-top" alt="..." width="280     box-shadow: 15px 15px rgb(212, 212, 178)rem" >
+        <img src="images/punjab_images/rajma.jpg" class="card-img-top" alt="..." width="280     box-shadow: 15px 15px rgb(212, 212, 178)rem" >
         <div class="card-body">
           <h2 class="card-title">Punjabi Rajma Masala</h2>
           <p class="card-text">  
@@ -352,7 +352,7 @@ Add cilantro and mix well and serve hot. <br>
       </div>
 
       <div class="card" style="width: 18rem;">
-        <img src="./images /punjab images/buttchi.jpg" class="card-img-top" alt="..." width="270rem" >
+        <img src="images/punjab_images/buttchi.jpg" class="card-img-top" alt="..." width="270rem" >
         <div class="card-body">
           <h2 class="card-title">Butter Chicken</h2>
           <p class="card-text">
@@ -419,7 +419,7 @@ Add cilantro and mix well and serve hot. <br>
 
 
       <div class="card" style="width: 18rem;">
-        <img src="./images /punjab images/dhaba.jpg" class="card-img-top" alt="..." width="280rem" >
+        <img src="images/punjab_images/dhaba.jpg" class="card-img-top" alt="..." width="280rem" >
         <div class="card-body">
           <h2 class="card-title">Dhaba Style Chicken Curry</h2>
           <p class="card-text"> 
@@ -472,7 +472,7 @@ Add cilantro and mix well and serve hot. <br>
 
 
       <div class="card" style="width: 18rem;">
-        <img src="./images /punjab images/makki.jpg" class="card-img-top" alt="..." width="280rem" >
+        <img src="images/punjab_images/makki.jpg" class="card-img-top" alt="..." width="280rem" >
         <div class="card-body">
           <h5 class="card-title">Makki ki Roti</h5>
           <p class="card-text"> INGREDIENTS
@@ -516,7 +516,7 @@ Add cilantro and mix well and serve hot. <br>
       </div>
 
       <div class="card" style="width: 18rem;">
-        <img src="./images /punjab images/tariwala.jpg" class="card-img-top" alt="..." width="280rem" >
+        <img src="images/punjab_images/tariwala.jpg" class="card-img-top" alt="..." width="280rem" >
         <div class="card-body">
           <h2 class="card-title">Punjabi Tari-wala Chicken</h2>
           <p class="card-text">  INGREDIENTS
