--- a/Namaste chef/tamil.html
+++ b/Namaste chef/tamil.html
@@ -54,14 +54,14 @@
 
   <div class="data">
     <h1>தமிழகத்திற்கு வரவேற்கிறோம் (welcome to tamil nadu)</h1>
-    <img src="./images /tamil images/nadu.jpg" alt="" width="100%">
+    <img src="images/tamil_images/nadu.jpg" alt="" width="100%">
   </div>
    
 
      <div class="container">   
 
     <div class="card" style="width: 18rem;">
-        <img src="./images /tamil images/Cabbage-Pachadi.jpg" class="card-img-top" alt="..." width="280rem" >
+        <img src="images/tamil_images/Cabbage-Pachadi.jpg" class="card-img-top" alt="..." width="280rem" >
         <div class="card-body">
           <h2 class="card-title">Cabbage Pachadi 
         </h2>
@@ -120,7 +120,7 @@
       
       
       <div class="card" style="width: 18rem;">
-        <img src="./images /tamil images/pongal.jpg" class="card-img-top" alt="..." width="280rem" >
+        <img src="images/tamil_images/pongal.jpg" class="card-img-top" alt="..." width="280rem" >
         <div class="card-body">
           <h2 class="card-title">Rava Pongal </h2>
           <p class="card-text">  INGREDIENTS
@@ -192,7 +192,7 @@
 
 
       <div class="card" style="width: 18rem;">
-        <img src="./images /tamil images/salna.jpg" class="card-img-top" alt="..." width="280rem" >
+        <img src="images/tamil_images/salna.jpg" class="card-img-top" alt="..." width="280rem" >
         <div class="card-body">
           <h2 class="card-title">Street Style Plain salna</h2>
           <p class="card-text">  INGREDIENTS
@@ -257,7 +257,7 @@
 
 
       <div class="card" style="width: 18rem;">
-        <img src="./images /tamil images/lemon.jpg" class="card-img-top" alt="..." width="280rem" >
+        <img src="images/tamil_images/lemon.jpg" class="card-img-top" alt="..." width="280rem" >
         <div class="card-body">
           <h2 class="card-title">South Indian Lemon Rice</h2>
           <p class="card-text">  INGREDIENTS
@@ -306,7 +306,7 @@
 
 
       <div class="card" style="width: 18rem;">
-        <img src="./images /tamil images/pachadi.jpg" class="card-img-top" alt="..." width="280rem" >
+        <img src="images/tamil_images/pachadi.jpg" class="card-img-top" alt="..." width="280rem" >
         <div class="card-body">
           <h2 class="card-title">Vendakka pachandi </h2>
           <p class="card-text">  INGREDIENTS
@@ -352,7 +352,7 @@
 
 
       <div class="card" style="width: 18rem;">
-        <img src="./images /tamil images/Elumichai-Oorugai.jpg" class="card-img-top" alt="..." width="280rem" >
+        <img src="images/tamil_images/Elumichai-Oorugai.jpg" class="card-img-top" alt="..." width="280rem" >
         <div class="card-body">
           <h2 class="card-title">Elumichai Oorugai</h2>
           <p class="card-text">  INGREDIENTS
@@ -400,7 +400,7 @@
 
 
       <div class="card" style="width: 18rem;">
-        <img src="./images /tamil images/kalumba.jpg" class="card-img-top" alt="..." width="280rem" >
+        <img src="images/tamil_images/kalumba.jpg" class="card-img-top" alt="..." width="280rem" >
         <div class="card-body">
           <h2 class="card-title">Chettinad mutton kulambu curry </h2>
           <p class="card-text">  INGREDIENTS
@@ -453,7 +453,7 @@
 
 
       <div class="card" style="width: 18rem;">
-        <img src="./images /tamil images/fish.jpg" class="card-img-top" alt="..." width="280rem" >
+        <img src="images/tamil_images/fish.jpg" class="card-img-top" alt="..." width="280rem" >
         <div class="card-body">
           <h2 class="card-title">Chettinad fish fry </h2>
           <p class="card-text">  INGREDIENTS
