--- a/Namaste chef/index copy.html
+++ b/Namaste chef/index copy.html
@@ -12,7 +12,7 @@
       <div class="container">
         <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
           <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
-            <img src="./images /our image and logo/logo.jpg" height="50" width="50" alt="logo" class="ourlogo">
+            <img src="images/our_image_and_logo/logo.jpg" height="50" width="50" alt="logo" class="ourlogo">
             <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"></use></svg>
             <span class="titles">Namaste Chef</span>
           </a>
@@ -44,7 +44,7 @@
         </div>
        
           <div class="front">
-            <img src="./images /front page images/front.jpg" class="frontpic" width="75%" height="75%" loading="lazy">
+            <img src="images/front_page_images/front.jpg" class="frontpic" width="75%" height="75%" loading="lazy">
           
         </div>
       </div>
@@ -56,7 +56,7 @@
   
     <div class="quote">
         <div class="p-5 text-center bg-body-tertiary rounded-3">
-         <img src="./images /our image and logo/logo.jpg" height="150" width="150" alt="logo">
+         <img src="images/our_image_and_logo/logo.jpg" height="150" width="150" alt="logo">
           <h1 class="text-body-emphasis">CHECK OUT FAMOUS DISHES</h1>
           <p class="col-lg-8 mx-auto fs-5 text-muted">
              WE HAVE BUILT THIS WEBSITE THAT FEATURES LOCAL INDIAN RECIPES AS WELL AS WIDE INDIAN RECIPES IN JUST FEW CLICKS....
@@ -69,7 +69,7 @@
 <section>
 <div class="container px-7 py-7 mb-2 my-5">
     <div class="card" style="width: 20rem;">
-        <img src="./images /state images/mhfood.jpg"card-img-top" alt="...">
+        <img src="images/state_images/mhfood.jpg"card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Maharashtra</h5>
           <p class="card-text">check out Maharashtrian Tadka in one click</p>
@@ -77,7 +77,7 @@
         </div>
       </div>
       <div class="card" style="width: 20rem;">
-        <img src="./images /state images/goa.jpg" class="card-img-top" alt="...">
+        <img src="images/state_images/goa.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Goa</h5>
           <p class="card-text">local Goan fish curry and much more, find out......</p>
@@ -86,7 +86,7 @@
         </div>
       </div>
       <div class="card" style="width: 20rem;">
-        <img src="./images /state images/idli.jpg" class="card-img-top" alt="...">
+        <img src="images/state_images/idli.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Tamil Nadu</h5>
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -94,7 +94,7 @@
         </div>
       </div>
       <div class="card" style="width: 20rem;">
-        <img src="./images /state images/punjab.jpg" class="card-img-top" alt="...">
+        <img src="images/state_images/punjab.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Punjab</h5>
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -102,7 +102,7 @@
         </div>
       </div>
       <div class="card" style="width: 20rem;">
-        <img src="./images /state images/karnataka.jpg" class="card-img-top" alt="...">
+        <img src="images/state_images/karnataka.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Karnataka</h5>
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -110,7 +110,7 @@
         </div>
       </div>
       <div class="card" style="width: 20rem;">
-        <img src="./images /state images/kashmir.jpg" class="card-img-top" alt="...">
+        <img src="images/state_images/kashmir.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">kashmir</h5>
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -118,7 +118,7 @@
         </div>
       </div>
       <div class="card" style="width: 20rem;">
-        <img src="./images /state images/kerela.jpg" class="card-img-top" alt="...">
+        <img src="images/state_images/kerela.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">kerela</h5>
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -126,7 +126,7 @@
         </div>
       </div>
       <div class="card" style="width: 20rem;">
-        <img src="./images /state images/raj.jpg" class="card-img-top" alt="...">
+        <img src="images/state_images/raj.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Rajasthan</h5>
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -148,7 +148,7 @@
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="./images /food images/food5.jpg" class="d-block" alt="..." height="600px" width="1600px" sizes="100">
+        <img src="images/food images/food5.jpg" class="d-block" alt="..." height="600px" width="1600px" sizes="100">
         <div class="carousel-caption d-none d-md-block">
           <h5>First slide label</h5>
           <p>Some representative placeholder content for the first slide.</p>
@@ -162,7 +162,7 @@
         </div>
       </div>
       <div class="carousel-item">
-        <img src="./images /food images/food6.jpg" class="d-block w-100" alt="..." height="600px" width="1600px">
+        <img src="images/food images/food6.jpg" class="d-block w-100" alt="..." height="600px" width="1600px">
         <div class="carousel-caption d-none d-md-block">
           <h5>Third slide label</h5>
           <p>Some representative placeholder content for the third slide.</p>
@@ -234,7 +234,7 @@
       <img class="rounded-circle me-1" width="24" height="24" src="https://github.com/mdo.png" alt="">Primary
     </span>
     <span class="badge d-flex align-items-center p-1 pe-2 text-secondary-emphasis bg-secondary-subtle border border-secondary-subtle rounded-pill">
-      <img class="rounded-circle" width="24" height="24" src="./images /our image and logo/athu.jpg" alt="">
+      <img class="rounded-circle" width="24" height="24" src="images/our_image_and_logo/athu.jpg" alt="">
      <a href="https://www.instagram.com/atharvx25/?next=%2F">Atharva</a>
     </span>
     <span class="badge d-flex align-items-center p-1 pe-2 text-success-emphasis bg-success-subtle border border-success-subtle rounded-pill">
