--- a/Namaste chef/kerela.html
+++ b/Namaste chef/kerela.html
@@ -12,7 +12,7 @@
 
 
     <div class="card" style="width: 18rem;">
-        <img src="./images /karnataka images/allugeda.jpg" class="card-img-top" alt="..." width="280rem" >
+        <img src="images/karnataka_images/allugeda.jpg" class="card-img-top" alt="..." width="280rem" >
         <div class="card-body">
           <h2 class="card-title">  Dal Vada
           </h2>
@@ -78,7 +78,7 @@
       </div>
 
       <div class="card" style="width: 18rem;">
-        <img src="./images /karnataka images/allugeda.jpg" class="card-img-top" alt="..." width="280rem" >
+        <img src="images/karnataka_images/allugeda.jpg" class="card-img-top" alt="..." width="280rem" >
         <div class="card-body">
           <h2 class="card-title">  Red Coconut Chutney
           </h2>
@@ -138,7 +138,7 @@ Serve the Kerala style Red Coconut Chutney with idli, dosa, medu vada or uttapam
         </div>
       </div>
       <div class="card" style="width: 18rem;">
-        <img src="./images /karnataka images/allugeda.jpg" class="card-img-top" alt="..." width="280rem" >
+        <img src="images/karnataka_images/allugeda.jpg" class="card-img-top" alt="..." width="280rem" >
         <div class="card-body">
           <h2 class="card-title">  Uzhunnu Vada (Medu Vada)
           </h2>
@@ -197,7 +197,7 @@ Serve the Kerala style Red Coconut Chutney with idli, dosa, medu vada or uttapam
       </div>
 
       <div class="card" style="width: 18rem;">
-        <img src="./images /karnataka images/allugeda.jpg" class="card-img-top" alt="..." width="280rem" >
+        <img src="images/karnataka_images/allugeda.jpg" class="card-img-top" alt="..." width="280rem" >
         <div class="card-body">
           <h2 class="card-title">  Appam
           </h2>
@@ -248,7 +248,7 @@ Serve the Kerala style Red Coconut Chutney with idli, dosa, medu vada or uttapam
       </div>
 
       <div class="card" style="width: 18rem;">
-        <img src="./images /karnataka images/allugeda.jpg" class="card-img-top" alt="..." width="280rem" >
+        <img src="images/karnataka_images/allugeda.jpg" class="card-img-top" alt="..." width="280rem" >
         <div class="card-body">
           <h2 class="card-title">  Kerala Style Sambar
 
@@ -321,7 +321,7 @@ Serve the Kerala style Red Coconut Chutney with idli, dosa, medu vada or uttapam
       </div>
 
       <div class="card" style="width: 18rem;">
-        <img src="./images /karnataka images/allugeda.jpg" class="card-img-top" alt="..." width="280rem" >
+        <img src="images/karnataka_images/allugeda.jpg" class="card-img-top" alt="..." width="280rem" >
         <div class="card-body">
           <h2 class="card-title"> Kerala Style Fish Molee  
           </h2>
@@ -389,7 +389,7 @@ Serve the Kerala style Red Coconut Chutney with idli, dosa, medu vada or uttapam
       </div>
 
       <div class="card" style="width: 18rem;">
-        <img src="./images /karnataka images/allugeda.jpg" class="card-img-top" alt="..." width="280rem" >
+        <img src="images/karnataka_images/allugeda.jpg" class="card-img-top" alt="..." width="280rem" >
         <div class="card-body">
           <h2 class="card-title"> Kerela Style Egg Curry (Matta Curry)
           </h2>
@@ -450,7 +450,7 @@ Serve the Kerala style Red Coconut Chutney with idli, dosa, medu vada or uttapam
       </div>
 
       <div class="card" style="width: 18rem;">
-        <img src="./images /karnataka images/allugeda.jpg" class="card-img-top" alt="..." width="280rem" >
+        <img src="images/karnataka_images/allugeda.jpg" class="card-img-top" alt="..." width="280rem" >
         <div class="card-body">
           <h2 class="card-title"> Kerala Rasam 
           </h2>
